# betaradio

./: ChangeLog  Makefile.am  TODO  autogen.sh  configure.ac  mkdeb.sh
data/: Makefile.am  betaradio.desktop.in
debian/: changelog  control  copyright  rules  watch
man/: Makefile.am  betaradio.1
po/: Makevars  POTFILES.in  zh_TW.po
src/: Makefile.am  betaradio.vala  gst_player.vala  json_soup.vala
utils/: academic.json  hichannel.html  hichannel.json  hichannel.py  hichannel.yaml  list.json
vapi/: Makefile.am  config.vapi
