AUX_DIST = \
           $(ac_aux_dir)/config.guess \
           $(ac_aux_dir)/config.sub \
           $(ac_aux_dir)/install-sh \
           $(ac_aux_dir)/ltconfig \
           $(ac_aux_dir)/ltmain.sh \
           $(ac_aux_dir)/missing \
           $(ac_aux_dir)/depcomp
SUBDIRS = po src data man vapi
ACLOCAL_AMFLAGS = -I m4
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in $(AUX_DIST)
